# SEDemo

./: .gitignore  LICENSE  README.md
SEDemo.xcworkspace/: contents.xcworkspacedata
SESigning/SESigning/: ContentView.swift  EnclaveOperations.swift  SESigningApp.swift
SESigning/SESigning.xcodeproj/: project.pbxproj
SESigning/SESigning.xcodeproj/xcuserdata/tk.xcuserdatad/xcschemes/: xcschememanagement.plist
SETLS/: BridgingHeader.h  build-rust.sh
SETLS/SETLS/: ContentView.swift  EnclaveOperations.swift  SETLSApp.swift
SETLS/SETLS.xcodeproj/: project.pbxproj
SETLS/SETLS.xcodeproj/xcuserdata/tk.xcuserdatad/xcschemes/: xcschememanagement.plist
ca_service/: Cargo.toml
ca_service/src/: main.rs
se_tls_rust/: Cargo.toml  build.rs
se_tls_rust/src/: api.rs  cert.rs  client.rs  lib.rs  server.rs  signer.rs
