[package]
name = "ca_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls-pki-types = "1"
pem = "3.0"
x509-parser = "0.16"
time = { version = "0.3", features = ["macros"] }
