[package]
name = "se_tls_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = { version = "0.1", features = ["async"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
reqwest = { version = "0.12", features = ["json"] }
rcgen = { version = "0.14", features = ["pem"] }
pem = "3.0"
anyhow = "1.0"
rustls-pki-types = "1.0"
p256 = "0.13"
spki = "0.7"
